# SUDSAQ

./: .gitignore  Dockerfile  README.md  setup.cfg  setup.py
docs/: 06_2023.pptx  MYR_SHAP.pptx  definitions.xlsx  variables.txt
envs/: README.md  environment.yml  mamba_install.sh  sudsaq-env.yml
notebooks/: gui.py  shap.ipynb
research/eshani/: AQ Bench Findings Slides.pptx  Final Results.pptx  aq_bench.py  aq_bench_europe.py  aq_bench_north_america.py  earth_engine_features.py  earth_engine_test.py  ee_image_data.csv  modis.py  momo_bias.py
research/james/: 5_year_average.py  analyze.py  append_momo.py  check_runs.py  compression.py  correct_ti.py  create.bias.11-15.8hour_avg.yml  data_checks.py  definitions.yml  gnn.py  high_res.py  hyperparamopt.py  imports.py  local_tz.py  mask_via_grid.py  model_stats.py  momo-mda8.py  momo.append.files.py  oh.py  predict_extra.py  psyplots.py  qsub.py  rename_vars.py  sel.py  sel_speed_tests.py  shap_ui.py  shap_ui_wip.ipynb  shaply.py  test_ti.py  toar-extra.py  toar.v2.o3.py  toar.v2.py  toar_momo_xarray.ipynb  toar_momo_xarray.py  xarray_interns.py
research/kelsey/: 2010_fire_globe.h5  2010_fire_globe_mode.nc  2010_modis_globe.h5  2010_modis_north_america.h5  2010_population_density_globe_stat.nc  2011_fire_globe_mode.nc  2011_mode.nc  2012_fire_globe_mode.nc  2012_mode.nc  2013_fire_globe_mode.nc  2013_mode.nc  2014_fire_globe_mode.nc  2014_mode.nc  2015_fire_globe_mode.nc  8hr.mean.kelsey.gattaca.yml  analyze_data.py  cluster_analysis.py  prep_gee.py  (+11 more)
sudsaq/: __init__.py  __main__.py  config.py  data.py  utils.py
(+159 files in other folders)
