[metadata]
name = sudsaq
version = attr: sudsaq.__version__
author = James Montgomery
author_email = J.Montgomery@jpl.nasa.gov
description = Science Understanding Data Science: Air Quality
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[project.urls]
Homepage = https://github.jpl.nasa.gov/jamesmo/SUDSAQ
Issues = https://github.jpl.nasa.gov/jamesmo/SUDSAQ/issues

[options]
packages = find:
python_requires = >=3.9
install_requires =
  click
  dask
  h5py
  matplotlib
  mlky
  numpy < 2.0.0
  pandas
  ray
  requests
  scikit-learn
  seaborn
  shap
  tqdm
  xarray

[options.extras_require]
dev =
  build

[options.entry_points]
console_scripts =
  sudsaq = sudsaq.__main__:cli
